--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -35,6 +35,6 @@
         <div><button class="btn-delete">Delete</button></div>
       </div>
     <div><button id="calc-prices-button">Calculate Prices</button></div>
-
+    <h2>Total Price: <span id="final-price">$0</span></h2>
   </body>
 </html>
